# ClusterMemberStore

./: CMakeLists.txt  README.md
include/ClusterMemberStore/: Database.hpp  Value.hpp
include/DatabaseAbstractions/: Database.hpp  Value.hpp
src/: Database.cpp  Value.cpp
test/: CMakeLists.txt
test/src/: ValueTests.cpp
